# tablereserve

./: .gitignore  Dockerfile  docker-compose.dev.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
dashboard/: forms.py  mixins.py  models.py  signals.py  urls.py  utils.py  views.py
docker/env/: .env.example
locations/: admin.py  apps.py  models.py
locations/migrations/: 0001_initial.py
reservations/: admin.py  apps.py  context_processors.py  forms.py  middleware.py  models.py  signals.py  urls.py  utils.py  views.py
reservations/migrations/: 0001_initial.py  0002_alter_cuisine_name_alter_establishment_name_and_more.py  0002_alter_place_house_number.py  0002_initial.py  0003_alter_discount_options_alter_discount_place.py  0003_alter_establishment_is_active_and_more.py  0003_alter_placeimage_image.py  0004_alter_event_options_discount_image_event_image_and_more.py  0004_establishment_owner.py  0005_alter_establishment_owner.py  0006_placetype_remove_establishment_cover_image_and_more.py  0007_alter_place_average_check.py  0008_feature_place_features.py  0009_city_alter_feature_name.py  0010_place_city.py  0011_city_image.py  0012_alter_city_image.py  0013_cuisine_slug.py  0014_reservation_email_reservation_first_name_and_more.py  0015_alter_reservation_order_number.py  0016_alter_reservation_order_number.py  0017_alter_reservation_order_number.py  0018_alter_reservation_date_alter_reservation_time.py  0019_alter_place_cover_image.py  0020_remove_workschedule_establishment_workschedule_place.py  0021_rename_order_number_reservation_number.py
reservations/templatetags/: custom_filters.py  custom_tags.py  floattags.py
static/css/: style.css
staticfiles/css/: 1.css  app2.css  style copy.css  style.css
staticfiles/favicons/: links.txt
staticfiles/js/: script.js
tablereserve/: asgi.py  celery.py  hosts.py  manage_urls.py  settings.py  urls.py  wsgi.py
templates/: base.html
templates/account/: email_confirm.html  forgot_password_modal.html  login.html  login_form.html  login_modal.html  password_reset.html  password_reset_done.html  register_modal.html  signup.html
templates/components/: footer.html  navbar.html
templates/dashboard/: add_place.html  add_place2.html  add_place_success.html  all_reservations.html  base.html  city_confirm_delete.html  city_detail.html  city_form.html  city_list.html  cuisine_detail.html  cuisine_list.html  dashboard.html  feature_detail.html  feature_list.html  hall_confirm_delete.html  hall_form.html  home.html  place_detail.html  place_form copy.html  place_form.html  place_request_success.html  place_submission_success.html  placefeature_confirm_delete.html  placefeature_form.html  placeimage_confirm_delete.html  placeimage_form.html  places_list.html  placetype_detail.html  placetype_form.html  placetype_list.html  reservation_detail.html  reservations_list.html  review_list.html  review_place_requests.html  table_confirm_delete.html  table_form.html  tag_detail.html  tag_list.html  update_request_detail.html  update_request_list.html  (+1 more)
templates/emails/: new_account_password.html  new_reservation_alert_owner.html  reservation_confirmation_user.html  (+1 more)
users/: adapters.py  admin.py  decorators.py  forms.py  middleware.py  models.py  urls.py  utils.py  views.py
(+51 files in other folders)
